# CS202-Game

./: .gitattributes  .gitignore  CMakeLists.txt  CMakelists.txt  README.md
assets/: CREDITS.MD  README.MD
docs/class-diagrams/: enemy-item-system.md
include/: GameState.hpp  MenuState.hpp  PlayState.hpp
include/entities/: Enemy.hpp  Item.hpp
include/entities/enemies/: FlyingEnemy.hpp  Goomba.hpp  Koopa.hpp
include/entities/items/: Coin.hpp  ItemEffect.hpp  Mushroom.hpp
include/entities/strategies/: FlyingStrategy.hpp  MovementStrategy.hpp  PatrolStrategy.hpp
src/: MenuState.cpp  PlayState.cpp  main.cpp
src/entities/enemies/: FlyingEnemy.cpp  Goomba.cpp  Koopa.cpp
src/entities/items/: Coin.cpp  Mushroom.cpp
src/entities/strategies/: FlyingStrategy.cpp  PatrolStrategy.cpp
